--- a/frontend/blogger-ai-frontend/src/assets/i18n/login/pl.json
+++ b/frontend/blogger-ai-frontend/src/assets/i18n/login/pl.json
@@ -6,5 +6,7 @@
   "EMAIL_REQUIRED": "Pole email jest wymagane",
   "INVALID_EMAIL": "Podaj poprawny adres email",
   "PASSWORD_REQUIRED": "Pole hasło jest wymagane",
-  "PASSWORD_MIN_LENGTH": "Hasło musi mieć co najmniej 6 znaków"
+  "PASSWORD_MIN_LENGTH": "Hasło musi mieć co najmniej 6 znaków",
+  "INVALID_CREDENTIALS": "Niepoprawne dane logowania",
+  "SOMETHING_WENT_WRONG": "Coś poszło nie tak, spróbój ponowanie później"
 }
